# ENC

./: README.md  commands.py  enc.py  mercy_clause.md  pyproject.toml
commands/: full_mercy_replacement.md
dimensions/: 13th-Source-Intuition.md
intuition/: 12th-13th-Layer.md
